--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -4,6 +4,10 @@
 // endbower
 
 
+body{
+  background-color: #f5f5f5;
+}
+
 /* Do not remove this comments bellow. It's the markers used by gulp-inject to inject
    all your sass files automatically */
 // injector
