added localization for project; layout refactored;

--- a/src/app/components/layout/layout.html
+++ b/src/app/components/layout/layout.html
@@ -8,23 +8,22 @@
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
           <!-- Title -->
-          <span class="mdl-layout-title">Blog example</span>
+          <a class="mdl-layout-title app-tittle" b-route="root">Blog example</a>
           <!-- Add spacer, to align navigation to the right -->
           <div class="mdl-layout-spacer"></div>
           <!-- Navigation. We hide it in small screens. -->
           <nav class="mdl-navigation mdl-layout--large-screen-only">
-            <a class="mdl-navigation__link" b-route="root">Main</a>
-            <a class="mdl-navigation__link" b-route="auth_sign_in">Sign In</a>
-            <a class="mdl-navigation__link" b-route="auth_sign_up">Sign Up</a>
+            <a class="mdl-navigation__link" b-route="auth_sign_in">{{t('layout.navigation.sign_in')}}</a>
+            <a class="mdl-navigation__link" b-route="auth_sign_up">{{t('layout.navigation.sign_up')}}</a>
           </nav>
         </div>
       </header>
       <div class="mdl-layout__drawer">
         <span class="mdl-layout-title">Blog example</span>
         <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" b-route="root">Main</a>
-          <a class="mdl-navigation__link" b-route="auth_sign_in">Sign In</a>
-          <a class="mdl-navigation__link" b-route="auth_sign_up">Sign Up</a>
+          <a class="mdl-navigation__link" b-route="root">{{t('layout.navigation.main')}}</a>
+          <a class="mdl-navigation__link" b-route="auth_sign_in">{{t('layout.navigation.sign_in')}}</a>
+          <a class="mdl-navigation__link" b-route="auth_sign_up">{{t('layout.navigation.sign_up')}}</a>
         </nav>
       </div>
 
