--- a/src/app/controllers/auth/sign_in/sign_in.html
+++ b/src/app/controllers/auth/sign_in/sign_in.html
@@ -1,10 +1,9 @@
 <div id="sign-in" class="mdl-card mdl-shadow--2dp">
   <div class="mdl-card__title">
-    <h2 class="mdl-card__title-text">Welcome</h2>
+    <h2 class="mdl-card__title-text" >{{t('auth.sign_in.title')}}</h2>
   </div>
   <div class="mdl-card__supporting-text">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-    Mauris sagittis pellentesque lacus eleifend lacinia...
+    body
   </div>
   <div class="mdl-card__actions mdl-card--border">
     <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
