--- a/src/app/controllers/auth/sign_in/sign_in.html
+++ b/src/app/controllers/auth/sign_in/sign_in.html
@@ -1,18 +1,31 @@
 <div id="sign-in" class="mdl-card mdl-shadow--2dp">
   <div class="mdl-card__title">
-    <h2 class="mdl-card__title-text" >{{t('auth.sign_in.title')}}</h2>
+    <h2 class="mdl-card__title-text">{{t('auth.sign_in')}}</h2>
   </div>
-  <div class="mdl-card__supporting-text">
-    body
-  </div>
-  <div class="mdl-card__actions mdl-card--border">
-    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-      Get Started
-    </a>
-  </div>
-  <div class="mdl-card__menu">
-    <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
-      <i class="material-icons">share</i>
-    </button>
-  </div>
+
+  <form novalidate id="sign-in-form">
+    <div class="mdl-card__supporting-text">
+      <div>
+        <div class="mdl-textfield mdl-js-textfield">
+          <input class="mdl-textfield__input" type="text" id="email"/>
+          <label class="mdl-textfield__label" for="email">{{t('auth.email')}}</label>
+        </div>
+      </div>
+      <div>
+        <div class="mdl-textfield mdl-js-textfield">
+          <input class="mdl-textfield__input" type="text" id="password"/>
+          <label class="mdl-textfield__label" for="password">{{t('auth.password')}}</label>
+        </div>
+      </div>
+    </div>
+    <div class="mdl-card__actions mdl-card--border">
+      <!-- Accent-colored raised button with ripple -->
+      <input type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent"
+             value="{{t('auth.sign_in')}}"/>
+
+      <a b-route="auth_sign_up" class="mdl-button mdl-js-button mdl-js-ripple-effect">
+        {{t('auth.sign_up')}}
+      </a>
+    </div>
+  </form>
 </div>
