--- a/src/app/controllers/auth/sign_up/sign_up.html
+++ b/src/app/controllers/auth/sign_up/sign_up.html
@@ -1,3 +1,31 @@
-<div id="sign-in">
-  sign up!
+<div id="sign-up" class="mdl-card mdl-shadow--2dp">
+  <div class="mdl-card__title">
+    <h2 class="mdl-card__title-text">{{t('auth.sign_up')}}</h2>
+  </div>
+
+  <form novalidate id="sign-in-form">
+    <div class="mdl-card__supporting-text ">
+      <div>
+        <div class="mdl-textfield mdl-js-textfield">
+          <input class="mdl-textfield__input" type="text" id="email"/>
+          <label class="mdl-textfield__label" for="email">{{t('auth.email')}}</label>
+        </div>
+      </div>
+      <div>
+        <div class="mdl-textfield mdl-js-textfield">
+          <input class="mdl-textfield__input" type="text" id="password"/>
+          <label class="mdl-textfield__label" for="password">{{t('auth.password')}}</label>
+        </div>
+      </div>
+    </div>
+    <div class="mdl-card__actions mdl-card--border">
+      <!-- Accent-colored raised button with ripple -->
+      <input type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent"
+             value="{{t('auth.sign_up')}}"/>
+
+      <a b-route="auth_sign_in" class="mdl-button mdl-js-button mdl-js-ripple-effect">
+        {{t('auth.sign_in')}}
+      </a>
+    </div>
+  </form>
 </div>
