--- a/src/app/controllers/auth/sign_in/sign_in.html
+++ b/src/app/controllers/auth/sign_in/sign_in.html
@@ -7,13 +7,13 @@
     <div class="mdl-card__supporting-text">
       <div>
         <div class="mdl-textfield mdl-js-textfield">
-          <input class="mdl-textfield__input" type="text" id="email" ng-model="user.email"/>
+          <input class="mdl-textfield__input" type="text" id="email" ng-model="authUser.email"/>
           <label class="mdl-textfield__label" for="email">{{t('auth.email')}}</label>
         </div>
       </div>
       <div>
         <div class="mdl-textfield mdl-js-textfield">
-          <input class="mdl-textfield__input" type="password" id="password" ng-model="user.password"/>
+          <input class="mdl-textfield__input" type="password" id="password" ng-model="authUser.password"/>
           <label class="mdl-textfield__label" for="password">{{t('auth.password')}}</label>
         </div>
       </div>
@@ -25,7 +25,7 @@
     <div class="mdl-card__actions mdl-card--border">
       <!-- Accent-colored raised button with ripple -->
       <input type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent"
-             value="{{t('auth.sign_in')}}" ng-click="signIn(user)"/>
+             value="{{t('auth.sign_in')}}" ng-click="signIn(authUser)"/>
 
       <a b-route="auth_sign_up" class="mdl-button mdl-js-button mdl-js-ripple-effect">
         {{t('auth.sign_up')}}
